--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = [
 ]
 readme = "README.md"
 
+
+
 # Use a realistic, widely supported Python range
 requires-python = ">=3.11,<3.13"
 
@@ -16,7 +18,12 @@ dependencies = [
 
     # Environment variables
     "python-dotenv>=1.0,<2.0",
+    "spacy>=3.7,<4.0",
+    "nltk>=3.8,<4.0"
 ]
+
+[tool.poetry]
+package-mode = false
 
 [project.optional-dependencies]
 
