--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "spacy>=3.7,<4.0",
     "nltk>=3.8,<4.0",
     "wn>=0.14.0",
+    "bert-score @ git+https://github.com/Tiiiger/bert_score.git",
 ]
 
 [tool.poetry]
